--- a/www/index.html
+++ b/www/index.html
@@ -46,9 +46,10 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
     <DT><a href="#un">Graph 14</a>: Italy, Switzerland, Washington, New York, New Jersey, Colorado, California, Florida, Louisiana, Michigan</DT>
     <DT><a href="#wn2">Graph 15</a>: Italy, USA, Canada, Israel, Chile, Pakistan, Turkey</DT>
     <DT><a href="#sa">Graph 16</a>: Italy, Argentina, Bolivia, Brazil, Chile, Ecuador, Paraguay, Peru, Uruguay, Venezuela</DT>
-    <DT><a href="#ww">Graph 17</a>: Italy, Spain, USA, Qatar, Thailand, Malaysia, Brazil, Bahrain, Indonesia, Kuwait, Egypt, India, Australia</DT>
-    <DT><a href="#ww2">Graph 18</a>: Qatar, Thailand, Malaysia, Brazil, Bahrain, Indonesiam Kuwait, Egypt, India, Australia</DT>
-    <DT><a href="#wl">Graph 19</a>: China, Italy, Iran, France, USA, South Korea, Japan (Linear Scale)</DT>
+    <DT><a href="#sea">Graph 17</a>: Italy, Vietnam, Philippines, Taiwan, Cambodia</DT>
+    <DT><a href="#ww">Graph 18</a>: Italy, Spain, USA, Qatar, Thailand, Malaysia, Brazil, Bahrain, Indonesia, Kuwait, Egypt, India, Australia</DT>
+    <DT><a href="#ww2">Graph 19</a>: Qatar, Thailand, Malaysia, Brazil, Bahrain, Indonesiam Kuwait, Egypt, India, Australia</DT>
+    <DT><a href="#wl">Graph 20</a>: China, Italy, Iran, France, USA, South Korea, Japan (Linear Scale)</DT>
     </DL>
 
     <h2>Europe</h2>
@@ -376,6 +377,15 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
   <LI>Most South American countries have been roughly along the 35% daily increase curve that Italy initially followed.
   <LI>Argentina seems to be roughly tracking along the 22% daily increase curve that Italy later moved on to.
   <LI>Cases in Ecuador are increasing significantly faster than 35% per day.  This usually indicates that the epidemic has spread without being detected, and testing is now catching up.
+</UL>
+<a name="sea"><h3>South East Asia, Confirmed Cases Per Million Inhabitants</h3></a>
+<img src="23mar2020/covid-world-seasia.png">
+<UL>
+  <LI> The graph shows number of confirmed cases per million
+  inhabitants, plotted on a log scale, against time.  The country
+    curves are shown offset by the amounts shown.
+  <LI>Data on this graph comes directly from the <a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data">JHU dataset</a>.  I have not double-checked the data, and it may lag by up to a day.
+  <LI>I have included a graph for Vietnam, Cambodia, Taiwan and the Philippines, not because the situation there is bad (they all have a few weeks lead time to prepare), but because the trend for each has recently started to look worrying.  
 </UL>
 <a name="ww"><h3>World, Confirmed Cases, Warm Countries</h3></a>
 <img src="23mar2020/covid-world-warm.png">
