--- a/www/index.html
+++ b/www/index.html
@@ -164,7 +164,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
       Generally when cases are increasing exponentially, most
       countries' death rate curves shadow the cases curve, with a lag
       of between 6 (France, UK) and 12 days (Germany).  Spain, France,
-      Netherlands and the UK look very similar to how the looked using
+      Netherlands and the UK look very similar to how they looked using
       case data around 6 days ago.  Germany is about ten days further
       back on this graph.  The difference in
       per-capita testing rates does not seem to explain this
