--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
     <DT><a href="#uk3">Graph 17</a> <B>Cases:</B> England, Scotland, Wales, Northern Island</DT> 
     <DT><a href="#w">Graph 18</a> <B>Cases:</B> China, Italy, Iran, France, Spain, USA, South Korea, Japan</DT>
     <DT><a href="#wn">Graph 19</a> <B>Cases:</B> Italy, Iran, France, USA, South Korea, Singapore, Japan, Australia</DT>
-    <DT><a href="#un">Graph 20</a> <B>Cases:</B> Italy, Switzerland, Washington, New York, New Jersey, Colorado, California, Florida, Louisiana, Michigan</DT>
+    <DT><a href="#un">Graph 20</a> <B>Cases:</B> Italy, Switzerland, Washington, New York, New Jersey, Colorado, California, Florida, Louisiana, Michigan, Texas</DT>
     <DT><a href="#wn2">Graph 21</a> <B>Cases:</B> Italy, USA, Canada, New Zealand</DT>
     <DT><a href="#wn3">Graph 22</a> <B>Cases:</B> Italy, USA, Israel, South Africa, Pakistan, Turkey</DT>
     <DT><a href="#usd">Graph 23</a> <B>Deaths:</B> Italy, USA, France, Germany</DT>
@@ -64,7 +64,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
 
     <h2>Europe</h2>
 <a name="e"><h3>Western Europe, Confirmed Cases</h3></a>
-   <img src="27mar2020/covid-eu.png">
+   <img src="28mar2020/covid-eu.png">
    <UL>
   <LI><I>Commentary updated: 2020-03-26</I>
    <LI> The graph shows <B>number of confirmed cases</b>, plotted on a log
@@ -92,7 +92,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
     </UL>
 <br>
 <a name="en"><h3>Western Europe, Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-eu-norm.png">
+<img src="28mar2020/covid-eu-norm.png">
    <UL>
   <LI><I>Commentary updated: 2020-03-26</I>
   <LI> The graph shows number of <B>confirmed cases per million
@@ -115,7 +115,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
     and France down to 13%.
 </UL>
 <a name="inc"><h3>Western Europe, Daily Increase in Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/rates.png">
+<img src="28mar2020/rates.png">
 <UL>
   <LI><I>Commentary updated: 2020-03-25</I>
   <LI> The graph shows number of <B>daily increase in confirmed cases
@@ -132,7 +132,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
    </UL>
 <a name="end"><h3>Western Europe, Deaths Per Million Inhabitants</h3></a>
 <UL>
-<img src="27mar2020/deaths-eu-norm.png">
+<img src="28mar2020/deaths-eu-norm.png">
   <LI><I>Commentary updated: 2020-03-24</I>
     <LI> The graph shows number of <B>deaths per million
       inhabitants</B>, plotted on a log scale, against time.  The
@@ -171,7 +171,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
       difference.
 </UL>
 <a name="el"><h3>Lombardy, Italy, Switzerland, Austria, Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-eu-lom.png">
+<img src="28mar2020/covid-eu-lom.png">
 <UL>
   <LI><I>Commentary updated: 2020-03-25</I>
   <LI> The graph shows number of <B>confirmed cases per million inhabitants</B>, plotted on a   log scale, against time.  The country curves are shown offset by the amounts shown.  
@@ -208,7 +208,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
   following the Lombardy curve about ten days behind.
 </UL>
 <a name="en2"><h3>Nordic Region, Confirmed Cases Per Million Inhabitants</h3></a>
-    <img src="27mar2020/covid-eu-norm2.png">
+    <img src="28mar2020/covid-eu-norm2.png">
     <UL>
   <LI><I>Commentary updated: 2020-03-24</I>
       <LI> The graph shows number of <B>confirmed cases per million
@@ -229,7 +229,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
       Korean curve.
     </UL>
 <a name="en2"><h3>Nordic Region, Offset Curves</h3></a>
-    <img src="27mar2020/covid-eu-norm2b.png">
+    <img src="28mar2020/covid-eu-norm2b.png">
     <UL>
   <LI><I>Commentary updated: 2020-03-25</I>
       <LI> The graph shows number of <B>confirmed cases per million
@@ -263,7 +263,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
 	few days.
     </UL>
 <a name="inc"><h3>Western Europe, Daily Increase in Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/rates.png">
+<img src="28mar2020/rates.png">
 <UL>
   <LI><I>Commentary updated: 2020-03-25</I>
   <LI> The graph shows number of <B>daily increase in confirmed cases
@@ -276,7 +276,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
   <LI>Generally, trends are easier to see on a cumulative plot, as changes are inherently more noisy.  However, this view is better to see whether a country has peaked or not.
 </UL>
 <a name="en3"><h3>Ireland, Belgium, Portugal, Luxembourg: Confirmed Cases Per Million Inhabitants</h3></a>
-    <img src="27mar2020/covid-eu-norm3.png">
+    <img src="28mar2020/covid-eu-norm3.png">
      <UL>  <LI><I>Commentary updated: 2020-03-25</I>
        <LI> The graph shows number of <B>confirmed cases per million inhabitants</b>, plotted on a log scale, against time.  The country curves are shown offset by the amounts shown.  
       <LI>In Belgium, the inital early ramp-up appears to be mostly
@@ -293,7 +293,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
       this graph would suggest.
       </UL>
 <a name="en3d"><h3>Deaths: Luxembourg, Italy, France, Germany</h3></a>
-    <img src="27mar2020/deaths-eu-norm2.png">
+    <img src="28mar2020/deaths-eu-norm2.png">
 <UL>
   <LI><I>Commentary updated: 2020-03-25</I>
 <LI>The graph shows <B>deaths per million inhabitants</B>, plotted on a log scale, against time.  The country curves are shown offset by
@@ -313,14 +313,14 @@ The German data shows a similar additional lag.
 <LI>
 </UL>
 <a name="en4"><h3>Eastern Europe Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-eu-norm4.png">
+<img src="28mar2020/covid-eu-norm4.png">
 <UL>
   <LI><I>Commentary updated: 2020-03-26</I>
   <LI> The graph shows number of <B>confirmed cases per million inhabitants</b>, plotted on a log scale, against time.
   <LI> Most Eastern European countries have shown large downturnes.  This logscale plot of cumulative confirmed cases no longer gives enough visibility into what is happened.  See the next graph for a better view.
 </UL>
 <a name="rates-eeu"><h3>Eastern Europe, Daily Increase of Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/rates-eeu.png">
+<img src="28mar2020/rates-eeu.png">
 <UL>
   <LI><I>Commentary updated: 2020-03-26</I>
   <LI> The graph shows number of <B>daily increase in confirmed cases
@@ -344,7 +344,7 @@ The German data shows a similar additional lag.
   conclusion yet - Italy has shown multiple such false peaks.
 </UL>
 <a name="en5"><h3>Baltic States, Belarus, Ukraine, Russia Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-eu-norm5.png">
+<img src="28mar2020/covid-eu-norm5.png">
 <UL>
   <LI>Commentary updated: 2020-03-25
   <LI>Estonia's small population and recent fast ramp up of cases
@@ -361,7 +361,7 @@ The German data shows a similar additional lag.
 <LI>Latvia also appears to be roughly following the 22% daily increase curve.
 </UL>
 <a name="elin"><h3>Western Europe, Confirmed Cases, Linear Scale</h3></a>
-    <img src="27mar2020/covid-eu-linear.png">
+    <img src="28mar2020/covid-eu-linear.png">
    <UL>
   <LI>Commentary updated: 2020-03-25
      <LI> The graph shows <b>number of confirmed cases</b>, plotted on a
@@ -376,7 +376,7 @@ The German data shows a similar additional lag.
      except it looks scarier.  
        </UL>
 <a name="uk1"><h3>England Regions</h3></a>
-<img src="27mar2020/covid-uk.png">
+<img src="28mar2020/covid-uk.png">
 <UL>
   <LI>Commentary updated: 2020-03-26
   <LI> The graph shows <b>number of confirmed cases per million inhabitants</b>, plotted on a log
@@ -386,7 +386,7 @@ The German data shows a similar additional lag.
     <LI>London is running around a week ahead of the UK, and is tracking along the curve that Lombardy followed.  Unlike France and Germany, the UK government was slow to impose stringent isolation measures; indeed they are still not as strict as elsewhere in Europe.
 </UL>      
 <a name="uk2"><h3>England Regions (linear scale)</h3></a>
-<img src="27mar2020/covid-uk-linear.png">
+<img src="28mar2020/covid-uk-linear.png">
 <UL>
   <LI>Commentary updated: 2020-03-25
   <LI> The graph shows <b>number of confirmed cases</b>, plotted on a
@@ -397,7 +397,7 @@ The German data shows a similar additional lag.
 </UL>
 
 <a name="uk3"><h3>London, England, Scotland, Wales, Northern Ireland</h3></a>
-    <img src="27mar2020/covid-uk-all.png">
+    <img src="28mar2020/covid-uk-all.png">
 <UL>
   <LI>Commentary updated: 2020-03-26
   <LI> The graph shows <b>number of confirmed cases per million
@@ -408,7 +408,7 @@ The German data shows a similar additional lag.
    curve that Italy followed.
 </UL>
 <a name="w"><h3>World</h3></a>
-   <img src="27mar2020/covid-world.png">
+   <img src="28mar2020/covid-world.png">
    <UL>
   <LI>Commentary updated: 2020-03-26
      <LI> The graph shows <b>number of confirmed cases</b>, plotted on a log
@@ -454,7 +454,7 @@ The German data shows a similar additional lag.
      are speculating.</a>
    </UL>
 <a name="wn"><h3>World, Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-world-norm.png">
+<img src="28mar2020/covid-world-norm.png">
 <UL>
   <LI> The graph shows number of confirmed cases per million
   inhabitants, plotted on a log scale, against time.  The country
@@ -475,40 +475,52 @@ The German data shows a similar additional lag.
   equivalent rise in imported cases.  The number of untraced cases remains small at this time.
     </UL>
 <a name="un"><h3>US States, Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-us-norm.png">
+<img src="28mar2020/covid-us-norm.png">
 <UL>
-  <LI><I>Commentary updated: 2020-03-26</I>
+  <LI><I>Commentary updated: 2020-03-28</I>
   <LI> The graph shows number of confirmed cases per million
-  inhabitants, plotted on a log scale, against time.  Each US state
-  curve is shown offset by the amount shown in the key so as to align the curves.
+    inhabitants, plotted on a log scale, against time.  Each US state
+    curve is shown offset by the amount shown in the key so as to align the curves.
+  <LI>I am now pulling data for this graph from
+    the <a href="https://github.com/nytimes/covid-19-data">NYT
+    dataset</a>, which is much less noisy than the JHU dataset I was
+    previously using.
   <LI>Most US states are a long way behind European countries, but
-  several now have comparable rates per million inhabitants, and New York is ahead. I have
-  plotted the states with most confirmed cases.
+    several now have comparable rates per million inhabitants and New
+    York is ahead. I have plotted the states with most confirmed
+    cases.
   <LI>European countries moved from a 35% daily increase curve to a
-  22% daily increase curve; Washington is one of the few US states to
-  have clearly made a similar transition, and in the last few days the
-  daily increase rate has declined further.  Washington is the only US
-  state with a large number of cases to start to turn the tide
-  significantly..
+    22% daily increase curve; Washington is one of the few US states
+    to have clearly made a similar transition, and in the last few
+    days the daily increase rate has declined further.  Washington is
+    the only US state with a large number of cases to start to turn
+    the tide significantly.
   <LI>New York was growing at close to the 35% daily increase rate
-  seen in Europe, but then had large increases over four days.  This
-  usually happens when cases have been spreading undetected, and
-  suddenly testing starts catching up.  I have placed New York based
-  on the last week of roughly 35% growth, but today's datapoint would
-  place New York several days growth above Italy.  At Italy seems to
-  have peaked and New York has more cases per head of population than
-  Italy, it makes no sense saying where New York is on Italy's track:
-  New York is forming its own track.
-  <LI>New Jersey, Louisiana, Illinois, Michigan, Colorado and Florida
-  have been increasing recently at close to the 35% daily increase
-  rate seen in Europe, so I've placed then on that curve, though this
-  gives misleading time delays relative to Italy.  Based on the most
-  recent data point, New Jersey is 12 days behind Italy.
-  <LI>California shows a slightly lower increase rate, recently close
-  to the 22% per day curve, and the data is very clean.
-    </UL>
+    seen in Europe, but then had very large increases over a week.
+    This usually happens when cases have been spreading undetected,
+    and suddenly testing starts catching up. The last few days, cases
+    in NY have been growing exponentially at around 22% per day.  This
+    is the same growth curve most European countries followed once
+    people started to get concerned about COVID19.  I have placed New
+    York so as to align it with the 22% curve.  This places it 4 days
+    offset from Italy, but today's datapoint would place New York
+    above Italy.  As Italy seems to have peaked and New York has more
+    cases per head of population than Italy, it makes no sense saying
+    where New York is on Italy's track: New York is forming its own
+    track.
+  <LI>Illinois and California are the other two states that are now
+    following the 22% curve.  California has followed the curve for
+    some time, but Illinois has only recently come out of fast growth
+    (presumably due to testing catching up somewhat) so we will have
+    to wait and see it it stabilizes along this curve.
+  <LI>New Jersey, Louisiana, Michigan, Colorado, Florida, and Texas
+    have been increasing recently at close to the 35% daily increase
+    rate seen in Europe, so I've placed then on that curve, though
+    this gives misleading time delays relative to Italy.  Based on the
+    most recent data point, New Jersey is 12 days behind Italy.
+</UL>
 <a name="wn2"><h3>World, Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-world-norm2.png">
+<img src="28mar2020/covid-world-norm2.png">
 <UL>
   <LI><I>Commentary updated: 2020-03-25</I>
   <LI> The graph shows number of confirmed cases per million
@@ -517,7 +529,7 @@ The German data shows a similar additional lag.
   <LI>Canada has been tracking along the 35% daily increase curve that most other countries have followed before social isolation measures were introduced, but is showing a lower increase rate the last four days.
 </UL>  
 <a name="wn3"><h3>World, Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-world-norm3.png">
+<img src="28mar2020/covid-world-norm3.png">
 <UL>
   <LI><I>Commentary updated: 2020-03-25</I>
   <LI> The graph shows number of confirmed cases per million
@@ -529,7 +541,7 @@ The German data shows a similar additional lag.
   <LI>Pakistan has seen very rapid rises, but is now converging on the 35% daily increase curve about 28 days behind Italy.
 </UL>  
 <a name="usd"><h3>Deaths: USA</h3></a>
-<img src="27mar2020/deaths-us.png">
+<img src="28mar2020/deaths-us.png">
 <UL>
 <LI>The graph shows <B>deaths per million inhabitants</B>, plotted on a log scale, against time.  The country curves are shown offset by
  the amounts shown. 
@@ -548,7 +560,7 @@ high.  If this gap widens in the future, then this would be evidence
   <LI> To put this in perspective if Italy is identifying just the ~10% of infections that need ICU care, the US is probably identifying very roughly ~30% of infections. (1.35 ^ 4 ~= 3)
 </UL>
 <a name="sa"><h3>South America, Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-world-sa2.png">
+<img src="28mar2020/covid-world-sa2.png">
 <UL>
   <LI> The graph shows number of confirmed cases per million
   inhabitants, plotted on a log scale, against time.  The country
@@ -559,7 +571,7 @@ high.  If this gap widens in the future, then this would be evidence
   <LI>Cases in Ecuador are increasing significantly faster than 35% per day.  This usually indicates that the epidemic has spread without being detected, and testing is now catching up.
 </UL>
 <a name="sea"><h3>South East Asia, Confirmed Cases Per Million Inhabitants</h3></a>
-<img src="27mar2020/covid-world-seasia.png">
+<img src="28mar2020/covid-world-seasia.png">
 <UL>
   <LI> The graph shows number of confirmed cases per million
   inhabitants, plotted on a log scale, against time.  The country
@@ -568,7 +580,7 @@ high.  If this gap widens in the future, then this would be evidence
   <LI>I have included a graph for Vietnam, Cambodia, Taiwan and the Philippines, not because the situation there is bad (they all have a few weeks lead time to prepare), but because the trend for each has recently started to look worrying.  
 </UL>
 <a name="ww"><h3>World, Confirmed Cases, Warm Countries</h3></a>
-<img src="27mar2020/covid-world-warm.png">
+<img src="28mar2020/covid-world-warm.png">
 <UL>
   <LI>Very few warm countries have enough cases to establish a clear
   increase rate trend.  The graph shows number of confirmed case for
@@ -593,7 +605,7 @@ high.  If this gap widens in the future, then this would be evidence
   <LI> In general, it does appear that COVID19 may spread more slowly in warm climates, but the evidence is inconclusive, with Brazil being the main counterexample.
   </UL>
 <a name="ww2"><h3>World, Confirmed Cases, Warm Countries</h3></a>
-<img src="27mar2020/covid-world-warm2.png">
+<img src="28mar2020/covid-world-warm2.png">
 <UL>
   <LI> The graph shows number of confirmed cases per million
   inhabitants, plotted on a log scale, against time.  The country
@@ -603,7 +615,7 @@ high.  If this gap widens in the future, then this would be evidence
   <LI>In general, all the warm country data is quite noisy.  Partly this is due to there being few cases in each country.  All these countries are showing a lower average increase rate to that see in Europe or the US.
 </UL>
 <a name="wl"><h3>World, Confirmed Cases, Linear Scale</h3></a>
-<img src="27mar2020/covid-world-linear.png">
+<img src="28mar2020/covid-world-linear.png">
 <UL>
   <LI><I>Commentary updated: 2020-03-26</I>
   <LI> The graph shows number of confirmed cases, plotted on a linear
