--- a/wwwparts/update.html
+++ b/wwwparts/update.html
@@ -1,1 +1,1 @@
-    <font color="red">Updated: 30th March 2020, 03:33 UTC <B>All graphs have been updated, but very little of the commentary has been as my family insisted I did something other than graphs today. I have managed to add a new Central America graph covering Mexico, Panama and the Domincan Republic, and split South America into two graphs, as there appears to be two distinct clusters of behaviour. MJH</B></font>
+    <font color="red">Updated: 31st March 2020, 03:56 BST <B>All graphs have been updated, and I've started to catch up on the commentatary. MJH</B></font>
