--- a/www/points.html
+++ b/www/points.html
@@ -13,7 +13,7 @@
   <P>
     <font color="red">Updated: 1st April 2020, 03:42 BST <B>All graphs
     have been updated, and I've started to catch up on the
-    commentatary. If you're colour-blind, there's a new link below
+    commentary. If you're colour-blind, there's a new link below
     each graph that toggles showing the data points with different
     symbols. MJH</B></font>
 <P>
@@ -33,7 +33,7 @@ are my interpretation only.  Nevertheless, I hope you find it useful.
 <h2>Contents</h2><DL>
 <DT><a href="#covid-eu">Graph 1:</a> <B>Cases</B>: Western Europe: Italy, Spain, France, Germany, Netherlands, UK</DT>
 <DT><a href="#covid-eu-norm">Graph 2:</a> <B>Cases</B>: Western Europe: Italy, Switzerland, Spain, France, Germany, Netherlands, UK</DT>
-<DT><a href="#rates">Graph 3:</a> <B>Increases</B>: Western Europe Daily Increases: Italy, Lombardy, France, USA, UK, Spain, Switzerland, Netherlands, Austria</DT>
+<DT><a href="#rates">Graph 3:</a> <B>Increases</B>: Western Europe Daily Increases: Italy, Lombardy, France, USA, UK, Spain, Spain, Switzerland, Netherlands, Austria</DT>
 <DT><a href="#deaths-eu-norm">Graph 4:</a> <B>Deaths</B>: Deaths: Western Europe: Italy, Spain, France, Netherlands, Switzerland, UK, Germany</DT>
 <DT><a href="#covid-eu-norm-lom">Graph 5:</a> <B>Cases</B>: Italy, Lombardy, Switzerland, Austria</DT>
 <DT><a href="#covid-eu-norm2">Graph 6:</a> <B>Cases</B>: Nordic Region: Italy, Iceland, Denmark, Norway, Sweden, Finland, South Korea</DT>
@@ -154,7 +154,7 @@ increase count appears to have peaked.
     if Spain has not yet peaked, I would expect it to do so in the
     next week.
 </UL>
-<hr><P><h3><a name="rates"></a>Western Europe Daily Increases: Italy, Lombardy, France, USA, UK, Spain, Switzerland, Netherlands, Austria</h3><P>
+<hr><P><h3><a name="rates"></a>Western Europe Daily Increases: Italy, Lombardy, France, USA, UK, Spain, Spain, Switzerland, Netherlands, Austria</h3><P>
 <img src="31mar2020/rates-lp.png"><P>
 <br><a href="index.html#rates"><small>HIDE DATA POINTS</small></a>
 <UL>
