--- a/wwwparts/update.html
+++ b/wwwparts/update.html
@@ -1,5 +1,5 @@
     <font color="red">Updated: 1st April 2020, 03:42 BST <B>All graphs
     have been updated, and I've started to catch up on the
-    commentatary. If you're colour-blind, there's a new link below
+    commentary. If you're colour-blind, there's a new link below
     each graph that toggles showing the data points with different
     symbols. MJH</B></font>
