--- a/wwwparts/faq.html
+++ b/wwwparts/faq.html
@@ -25,7 +25,7 @@ pages</a> contain links to the national authorities.  Some are
   <a href="https://www.gov.uk/guidance/coronavirus-covid-19-information-for-the-public">UK</a>,
 
 <P><B>Q: Can I have your data?</B>
-  <P>My data is <a href="https://github.com/mhandley/COVID19/">on github</a>..
+  <P>My data is <a href="https://github.com/mhandley/COVID19/">on github</a>.
   <P>A more complete dataset is the <a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series">Johns Hopkins</a> one. It tends to lag the national data sources and the WHO, but it is complete and machine readable.
 
   <P><B>Q: Can I use your graphs?</B>
@@ -70,7 +70,7 @@ pages</a> contain links to the national authorities.  Some are
     absolute counts, not counts per million inhabitants.  As the vast
     majority of Chinese cases were in Hubei, there's not a great deal
     of difference on these graphs between showing Hubei and showing
-    all of China.  The population of Hubei provice is around 57
+    all of China.  The population of Hubei province is around 57
     million, which is roughly the same as Italy.  Thus the data for
     China is reasonably comparable with the data for Italy.
 <P>
@@ -79,7 +79,7 @@ pages</a> contain links to the national authorities.  Some are
    Mostly I'm using Italy to provide a model for how other places
    might progress, as it's a better fit.  But as of March 16th, I've
    changed the last (linear) graph to use the Chinese data to show one
-   possible direction that Italy might folliow.
+   possible direction that Italy might follow.
 <P>
    Elsewhere in China, cases that arose were stamped on quickly, and
    pretty much all of China shut down until that was complete.  In
